fixing broken link + unaligned image
Former-commit-id: fe61817173366bb66d542780a08acc8618696f91

--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ padding-top: 40px;
 }
 
 .about_photo {
-  width: 85%;
+  width: 90%;
   margin-left: 55%;
   height: 100%;
 }
